--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc && ts-node-dev src/index.ts",
-    "start": "tsc && node dist/src/index.js",
+    "start": "tsc && node dist/index.js",
     "build": "tsc --project tsconfig.json"
   },
   "author": "",
